--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
             <div class="items">
                 <div>
                     <div>
-                        <img src="/images/sakarias_chair.png" alt="">
-                        <img src="/images/blur.png" alt="">
+                        <img src="images/sakarias_chair.png" alt="">
+                        <img src="images/blur.png" alt="">
                     </div>
                     <div>
                         <span>Chair</span>
@@ -105,8 +105,8 @@
                 </div>
                 <div>
                     <div>
-                        <img src="/images/baltsar_chair.png" alt="">
-                        <img src="/images/blur.png" alt="">
+                        <img src="images/baltsar_chair.png" alt="">
+                        <img src="images/blur.png" alt="">
                     </div>
                     <div>
                         <span>Chair</span>
@@ -128,8 +128,8 @@
                 </div>
                 <div>
                     <div>
-                        <img src="/images/anjay_chair.png" alt="">
-                        <img src="/images/blur.png" alt="">
+                        <img src="images/anjay_chair.png" alt="">
+                        <img src="images/blur.png" alt="">
                     </div>
                     <div>
                         <span>Chair</span>
@@ -151,8 +151,8 @@
                 </div>
                 <div>
                     <div>
-                        <img src="/images/nyantuy_chair.png" alt="">
-                        <img src="/images/blur.png" alt="">
+                        <img src="images/nyantuy_chair.png" alt="">
+                        <img src="images/blur.png" alt="">
                     </div>
                     <div>
                         <span>Chair</span>
@@ -177,7 +177,7 @@
         </div>
         <div class="experiences">
             <div class="img">
-                <img src="/images/experiences.png" alt="">
+                <img src="images/experiences.png" alt="">
                 <div class="overlay-1"></div>
                 <div class="overlay-2"></div>
             </div>
@@ -200,20 +200,20 @@
                 </button>
             </div>
             <div class="img">
-                <img class="img1" src="/images/materials_1.png" alt="">
-                <img class="img2" src="/images/materials_2.png" alt="">
-                <img class="img3" src="/images/materials_3.png" alt="">
+                <img class="img1" src="images/materials_1.png" alt="">
+                <img class="img2" src="images/materials_2.png" alt="">
+                <img class="img3" src="images/materials_3.png" alt="">
             </div>
         </div>
         <div class="testimonials">
             <span>TESTIMONIALS</span>
             <h1>Our Client Reviews</h1>
             <div>
-                <div class="testimonials-1" style="background-image: url('/images/testimonials_bg_1.png');">
+                <div class="testimonials-1" style="background-image: url('images/testimonials_bg_1.png');">
                     <div>
                         <div>
                             <div class="profile_picture">
-                                <img src="/images/upin.png" alt="">
+                                <img src="images/upin.png" alt="">
                             </div>
                             <div class="name">
                                 <h3>Bang Upin</p>
@@ -232,11 +232,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="testimonials-2" style="background-image: url('/images/testimonials_bg_2.png');">
+                <div class="testimonials-2" style="background-image: url('images/testimonials_bg_2.png');">
                     <div>
                         <div>
                             <div class="profile_picture">
-                                <img src="/images/sukijan.png" alt="">
+                                <img src="images/sukijan.png" alt="">
                             </div>
                             <div class="name">
                                 <h3>Ibuk Sukijan</p>
@@ -255,11 +255,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="testimonials-3" style="background-image: url('/images/testimonials_bg_3.png');">
+                <div class="testimonials-3" style="background-image: url('images/testimonials_bg_3.png');">
                     <div>
                         <div>
                             <div class="profile_picture">
-                                <img src="/images/ina.png" alt="">
+                                <img src="images/ina.png" alt="">
                             </div>
                             <div class="name">
                                 <h3>Mpok Ina</p>
